--- a/Coupon/addCoupon.html
+++ b/Coupon/addCoupon.html
@@ -33,11 +33,11 @@
           <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
-                  src="/Layout/DashboardSidebar.html"
-                  frameborder="0"
-                  scrolling="no"
-                  height="100%"
-                  ></iframe>
+              src="/Layout/DashboardSidebar.html"
+              frameborder="0"
+              scrolling="no"
+              height="100%"
+            ></iframe>
             <!-- In your main HTML page -->
             <!-- #include virtual="sidebar.html" -->
           </div>
@@ -87,10 +87,10 @@
                   <label for="name">Name:</label>
                   <input type="text" id="name" name="name" required />
 
-                  <label for="image">Validity and Starting:</label>
+                  <label for="validity">Validity and Starting:</label>
                   <input type="text" id="validity" name="validity" required />
 
-                  <label for="description">Discount Price::</label>
+                  <label for="discountPrice">Discount Price::</label>
                   <input
                     id="discountPrice"
                     name="discountPrice"
@@ -125,6 +125,41 @@
       closePopupButton.addEventListener("click", () => {
         editPopup.style.display = "none";
       });
+    </script>
+    <script>
+      async function submitForm(event) {
+        event.preventDefault();
+        console.log("inside");
+        const name = document.getElementById("name").value;
+        const validity = document.getElementById("validity").value;
+        const discountPrice = document.getElementById("discountPrice").files[0];
+
+        const formData = new FormData();
+        formData.append("name", name);
+        formData.append("validity", validity);
+        formData.append("discountPrice", discountPrice);
+
+        try {
+          const response = await fetch(
+            "https://api.bhattacharjeesolution.in/book/api/category/add.php",
+            {
+              method: "POST",
+              body: formData,
+            }
+          );
+
+          if (response.ok) {
+            // Handle success (e.g., display a success message)
+            console.log("Form submitted successfully!");
+            window.location.href = "Coupon.html";
+          } else {
+            // Handle error (e.g., display an error message)
+            console.error("Form submission failed!");
+          }
+        } catch (error) {
+          console.error("An error occurred:", error);
+        }
+      }
     </script>
     <!-- <script>
       fetch("../Layout/DashboardSidebar.html")
