--- a/Product/Product.html
+++ b/Product/Product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Banner</title>
+    <title>Product</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
@@ -67,7 +67,7 @@
               </div>
               <!-- maincontent   -->
               <div class="mt-3">
-                <h2>All Banner</h2>
+                <h2>All Product</h2>
 
                 <div
                   style="
@@ -77,7 +77,7 @@
                   "
                 >
                   <button class="btnadd btn-primary mb-3">
-                    <a href="/Banner/addBanner.html">Add Banner</a>
+                    <a href="/Product/addProduct.html">Add Product</a>
                   </button>
                   <form>
                     <div class="form-group">
@@ -102,9 +102,14 @@
                   <thead>
                     <tr>
                       <th>#</th>
-                      <th>Banner Name</th>
-                      <th>Description</th>
+                      <th>Name</th>
                       <th>Image</th>
+                      <th>Category Id</th>
+                      <th>Sub Category Id</th>
+                      <th>Description</th>
+                      <th>Mrp</th>
+                      <th>Discount</th>
+                      <th>Quantity</th>
                       <th>Actions</th>
                     </tr>
                   </thead>
@@ -134,6 +139,7 @@
                       id="fileInput"
                       name="image"
                       accept="image/*"
+                      required
                     />
                     <img
                       id="preimage"
@@ -141,6 +147,12 @@
                       width="100%"
                       height="100px"
                     />
+
+                    <label for="name">Discount:</label>
+                    <input type="number" id="name" name="discount" required />
+
+                    <label for="name">Quantity:</label>
+                    <input type="number" id="name" name="quantity" required />
 
                     <div class="actions">
                       <button type="submit" id="submitEdit">Submit</button>
@@ -156,7 +168,7 @@
       </div>
     </div>
     <script src="../Script.js"></script>
-    <script src="banner.js"></script>
+    <script src="product.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
       var fileInput = document.getElementById("fileInput");
